--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <html>
     <body>
-        <h1>- **Team**
-            - [Manuel Jesús González Bueno](https://github.com/manueljgb)
-            - [Pablo Galán Acedo](https://github.com/pabgalace)
-            - [Bruno Alvaro Rico Barrilero](https://github.com/brico1994)
-          - **Project description**: Relación entre energía generada, gasto en defensa y ...
-          - **Repository**: [gti-sos/SOS2122-26](https://github.com/gti-sos/SOS2122-26)
-          - **URL**: [http://sos2122-26.herokuapp.com](http://sos2122-26.herokuapp.com)
-          -  **APIs**:
-              - [https://sos2122-00.herokuapp.com/api/v1/my-awesome-resource-1/docs](https://sos2122-00.herokuapp.com/api/v1/my-awesome-resource-1/docs) (developed by [Manuel Jesús González Bueno](https://github.com/404))
-              - [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs) (developed by [Pablo Galán Acedo](https://github.com/pabgalace))
-              - [https://sos2122-brb.herokuapp.com](https://sos2122-brb.herokuapp.com) (developed by [Bruno Alvaro Rico Barrilero](https://github.com/brico1994))</h1>
+        <h1>SOS2122-31</h1>
+
+        <h3>Team</h3>
+        - [Manuel Jesús González Bueno](https://github.com/manueljgb)
+        - [Bruno Alvaro Rico Barrilero](https://github.com/brico1994)
+        - [Pablo Galán Acedo](https://github.com/pabgalace)
+        <h3>Project description:</h3> falta completar
+        <h3>Repository:</h3>[gti-sos/SOS2122-26](https://github.com/gti-sos/SOS2122-26)
+        <h3>URL:</h3>[http://sos2122-26.herokuapp.com](http://sos2122-26.herokuapp.com)
+        <h3>APIS:</h3>
+        - [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs) (developed by [Manuel Jesús González Bueno](https://github.com/manueljgb))
+        - [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs) (developed by [Bruno Alvaro Rico Barrilero](https://github.com/brico1994))
+        - [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs) (developed by [Pablo Galán Acedo](https://github.com/pabgalace))
     </body>
 </html>
