--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
         <h1>SOS2122-31</h1>
 
         <h3>Team</h3>
-        <h4>- [Manuel Jesús González Bueno](https://github.com/manueljgb)</h4>
-        <h4>- [Bruno Alvaro Rico Barrilero](https://github.com/brico1994)</h4>
-        <h4>- [Pablo Galán Acedo](https://github.com/pabgalace)</h4>
+        <p>- [Manuel Jesús González Bueno](https://github.com/manueljgb)</p>
+        <p>- [Bruno Alvaro Rico Barrilero](https://github.com/brico1994)</p>
+        <p>- [Pablo Galán Acedo](https://github.com/pabgalace)</p>
         <h3>Project description:</h3> falta completar
         <h3>Repository:</h3>[gti-sos/SOS2122-26](https://github.com/gti-sos/SOS2122-26)
         <h3>URL:</h3>[http://sos2122-26.herokuapp.com](http://sos2122-26.herokuapp.com)
         <h3>APIS:</h3>
-        <h4>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs) (developed by [Manuel Jesús González Bueno](https://github.com/manueljgb))</h4>
-        <h4>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs) (developed by [Bruno Alvaro Rico Barrilero](https://github.com/brico1994))</h4>
-        <h4>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs) (developed by [Pablo Galán Acedo](https://github.com/pabgalace))</h4>
+        <p>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs) (developed by [Manuel Jesús González Bueno](https://github.com/manueljgb))</p>
+        <p>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs) (developed by [Bruno Alvaro Rico Barrilero](https://github.com/brico1994))</p>
+        <p>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs) (developed by [Pablo Galán Acedo](https://github.com/pabgalace))</p>
     </body>
 </html>
