--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,22 @@
 <html>
     <body>
-        <h1>SOS2122-31</h1>
-
-        <h2>Team</h2>
-        <p>- [Manuel Jesús González Bueno](https://github.com/manueljgb)</p>
-        <p>- [Bruno Alvaro Rico Barrilero](https://github.com/brico1994)</p>
-        <p>- [Pablo Galán Acedo](https://github.com/pabgalace)</p>
-        <h2>Project description:</h2> falta completar
-        <h2>Repository:</h2>[gti-sos/SOS2122-26](https://github.com/gti-sos/SOS2122-26)
-        <h2>URL:</h2>[http://sos2122-26.herokuapp.com](http://sos2122-26.herokuapp.com)
-        <h2>APIS:</h2>
-        <p>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-1/docs) (developed by [Manuel Jesús González Bueno](https://github.com/manueljgb))</p>
-        <p>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-2/docs) (developed by [Bruno Alvaro Rico Barrilero](https://github.com/brico1994))</p>
-        <p>- [https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs](https://sos2122-26.herokuapp.com/api/v1/my-awesome-resource-3/docs) (developed by [Pablo Galán Acedo](https://github.com/pabgalace))</p>
+        <h2 id="sos2122-26">SOS2122-26</h2>
+<ul>
+<li><strong>Team</strong><ul>
+<li><a href="https://github.com/manueljgb">Manuel Jesús González Bueno</a></li>
+<li><a href="https://github.com/pabgalace">Pablo Galán Acedo</a></li>
+<li><a href="https://github.com/brico1994">Bruno Alvaro Rico Barrilero</a></li>
+</ul>
+</li>
+<li><strong>Project description</strong>: Estudio y análisis de la relación entre el gasto público en defensa, generación energética e indice de desarrollo</li>
+<li><strong>Repository</strong>: <a href="https://github.com/gti-sos/SOS2122-26">gti-sos/SOS2122-26</a></li>
+<li><strong>URL</strong>: <a href="http://sos2122-26.herokuapp.com">http://sos2122-26.herokuapp.com</a></li>
+<li><strong>APIs</strong>:<ul>
+<li><a href="https://sos2021-00.herokuapp.com/api/v1/my-awesome-resource-1/docs">https://sos2021-00.herokuapp.com/api/v1/my-awesome-resource-1/docs</a> (developed by <a href="https://github.com/manueljgb">Manuel Jesús González Bueno</a>)</li>
+<li><a href="https://sos2021-00.herokuapp.com/api/v1/my-awesome-resource-2/docs">https://sos2021-00.herokuapp.com/api/v1/my-awesome-resource-2/docs</a> (developed by <a href="https://github.com/pabgalace">Pablo Galán Acedo</a>)</li>
+<li><a href="https://sos2021-00.herokuapp.com/api/v1/my-awesome-resource-3/docs">https://sos2021-00.herokuapp.com/api/v1/my-awesome-resource-3/docs</a> (developed by <a href="https://github.com/brico1994">Bruno Alvaro Rico Barrilero</a>)</li>
+</ul>
+</li>
+</ul>
     </body>
 </html>
