--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
         <h2 id="sos2122-26">SOS2122-26</h2>
 <ul>
 <li><strong>Team</strong><ul>
-<li><a href="https://github.com/manueljgb">Manuel Jesús González Bueno</a></li>
+<li><a href="https://github.com/manueljgb">Manuel Jesús González Bueno (?)</a></li>
 <li><a href="https://github.com/pabgalace">Pablo Galán Acedo</a></li>
 <li><a href="https://github.com/brico1994">Bruno Alvaro Rico Barrilero</a></li>
 </ul>
