API REST v2 front-end

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,19 @@
-<html>
-    <body>
-        <h2 id="sos2122-26">SOS2122-26</h2>
-<ul>
-<li><strong>Team</strong><ul>
-<li><a href="https://github.com/manueljgb">Manuel Jesús González Bueno</a></li>
-<li><a href="https://github.com/pabgalace">Pablo Galán Acedo</a></li>
-<li><a href="https://github.com/brico1994">Bruno Alvaro Rico Barrilero</a></li>
-</ul>
-</li>
-<li><strong>Project description</strong>: Estudio y análisis de la relación entre el gasto público en defensa, generación energética e indice de desarrollo</li>
-<li><strong>Repository</strong>: <a href="https://github.com/gti-sos/SOS2122-26">gti-sos/SOS2122-26</a></li>
-<li><strong>URL</strong>: <a href="http://sos2122-26.herokuapp.com">http://sos2122-26.herokuapp.com</a></li>
-<li><strong>APIs</strong>:<ul>
-<li><a href="https://sos2122-26.herokuapp.com/api/v1/electricity-generation-stats/docs">https://sos2122-26.herokuapp.com/api/v1/electricity-generation-stats/docs</a> (developed by <a href="https://github.com/manueljgb">Manuel Jesús González Bueno</a>)</li>
-<li><a href="https://sos2122-26.herokuapp.com/api/v1/defense-spent-stats/docs">https://sos2122-26.herokuapp.com/api/v1/defense-spent-stats/docs</a> (developed by <a href="https://github.com/pabgalace">Pablo Galán Acedo</a>)</li>
-<li><a href="https://sos2122-26.herokuapp.com/api/v1/developement-indicators-stats/docs">https://sos2122-26.herokuapp.com/api/v1/developement-indicators-stats/docs</a> (developed by <a href="https://github.com/brico1994">Bruno Alvaro Rico Barrilero</a>)</li>
-</ul>
-</li>
-</ul>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
+
+	<title>SOS2122-26</title>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
+
+	<script defer src='/build/bundle.js'></script>
+</head>
+
+<body>
+</body>
 </html>
